objects/OrderCustom__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountName</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OrderCustom</relationshipLabel>
        <relationshipName>OrderCustom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OrderCustom</relationshipLabel>
        <relationshipName>OrderCustom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivered_Date__c</fullName>
        <label>Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COD</fullName>
                </value>
                <value>
                    <fullName>Net</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>Debit Card</fullName>
                </value>
                <value>
                    <fullName>EMI</fullName>
                </value>
                <value>
                    <fullName>Wallet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PAID</fullName>
                </value>
                <value>
                    <fullName>COD</fullName>
                </value>
                <value>
                    <fullName>Partially Paid</fullName>
                </value>
                <value>
                    <fullName>EMI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open, In</fullName>
                </value>
                <value>
                    <fullName>Process, Dispatched</fullName>
                </value>
                <value>
                    <fullName>Shipped, Out</fullName>
                </value>
                <value>
                    <fullName>for Delivery, Delivered</fullName>
                </value>
                <value>
                    <fullName>Closed, Return</fullName>
                </value>
                <value>
                    <fullName>Requested,</fullName>
                </value>
                <value>
                    <fullName>Returned,</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Items__c</fullName>
        <label>Total Items</label>
        <summarizedField>OrderLineItem__c.Quantity__c</summarizedField>
        <summaryForeignKey>OrderLineItem__c.OrderCustom__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <summarizedField>OrderLineItem__c.Total__c</summarizedField>
        <summaryForeignKey>OrderLineItem__c.OrderCustom__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>OrderCustom</label>
    <nameField>
        <displayFormat>O-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderCustom</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>